# synapseed

./: .env.example  .gitignore  CLAUDE.md  Documentacion.md  README.md  docker-compose.yml  run_build_frontend.bat  run_build_frontend.ps1
.claude/agent-memory/sugerencias-implementor/: project_solid_refactor.md
.claude/agents/: cohesion-architect.md  coupling-architecture-reviewer.md  solid-code-architect.md  sugerencias-implementor.md
.github/agents/: API-designer.agent.md  Synapseed-api-coder.agent.md  code-explainer.agent.md  synapseed-api-architect.agent.md  synapseed-api-documentation.agent.md  synapseed-ui-engineer.agent.md
Docs/: AgentOrchs.md  Decisiones_de_Diseno.md  Guia_del_Desarrollador.md  Spec_validada.md  cambios_SOLID.md  implementation_plan_1.md  lista_de_tareas.md  sugerencias_SOLID.md
Docs/UX/: testing_tasks.md
Docs/database/: create_tables.sql  schema.dbml
scrapping/: sfe_scraper.py
skills/agentic/: .clinerules  AGENTS.md  Consideraciones.md  requirements.txt
skills/agentic/.agents/: CHANGELOG.md  config.yaml
skills/agentic/.agents/scripts/: create_skill.py  generate_agent_rules.py  validate_skills.py
skills/agentic/.agents/shared/: README.md
skills/agentic/.agents/shared/templates/: github-actions-ci.yml
skills/agentic/.agents/skills/_template-skill/: SKILL.md
skills/agentic/.agents/skills/api-designer/: SKILL.md
skills/agentic/.agents/skills/code-improver/: SKILL.md
skills/agentic/.agents/skills/database-designer/: SKILL.md
skills/agentic/.agents/skills/devops-engineer/: SKILL.md
skills/agentic/.agents/skills/docs-generator/: SKILL.md
skills/agentic/.agents/skills/git-workflow/: SKILL.md
skills/agentic/.agents/skills/performance-engineer/: SKILL.md
skills/agentic/.agents/skills/project-scaffolder/: SKILL.md
skills/agentic/.agents/skills/security-auditor/: SKILL.md
skills/agentic/.agents/skills/software-architect/: SKILL.md
skills/agentic/.agents/skills/structure-analyzer/: SKILL.md
skills/agentic/.agents/skills/test-strategist/: SKILL.md
skills/agentic/.agents/tests/: test_validate_skills.py
src/backend/: .dockerignore  Dockerfile  Dockerfile.worker  README.md  alembic.ini  pyproject.toml
src/backend/alembic/: env.py
src/backend/alembic/versions/: 001_initial_schema.py  002_add_auth_user_id.py  20260606_2004_initial_schema.py  20260606_2013_increase_product_field_lengths.py  20260616_2054_create_lmrs_table.py  20260616_add_llm_fields_to_recommendation_products.py
src/backend/app/: __init__.py  config.py  dependencies.py  main.py
src/backend/app/agents/: README.md  __init__.py  analyzer_agent.py  legal_validator_agent.py  orchestrator.py  researcher_agent.py  state.py  synthesizer_agent.py
src/backend/app/agents/prompts/: __init__.py  analyzer.py  legal_validator.py  synthesizer.py
src/backend/app/api/: __init__.py
src/backend/app/api/v1/: auth.py  catalogs.py  health.py  recommendations.py  router.py  users.py  zones.py
src/backend/app/core/: __init__.py  redis.py  security.py  supabase.py
src/backend/app/db/: __init__.py  base.py  seed.py  session.py
src/backend/app/models/: __init__.py  audit_log.py  base.py  distributor.py  lmr.py  product.py  recommendation.py  regulation.py  user.py  zone.py
src/backend/app/repositories/: __init__.py  audit_repository.py  base.py  distributor_repository.py  lmr_repository.py  product_repository.py  recommendation_repository.py  regulation_repository.py  user_repository.py  zone_repository.py
src/backend/app/schemas/: __init__.py  agent_context.py  agent_legal.py  agent_products.py  agent_recommendations.py  auth.py  common.py  farmer_input.py  user.py
src/backend/app/services/: __init__.py  auth_service.py  auth_strategy.py  llm_client.py  recommendation_query_service.py  recommendation_service.py  recommendation_stream_service.py  task_dispatcher.py  zone_service.py
src/backend/app/workers/: celery_app.py  tasks.py
src/backend/scripts/: fix_alembic_version.py  import_lmr.py  list_free_models.py  run_agent_pipeline.py  test_db_connection.py  test_integration.py  test_openrouter.py
src/backend/tests/: conftest.py  test_api_endpoints.py
src/backend/tests/agents/: test_analyzer_agent.py  test_legal_validator_agent.py  test_llm_client.py  test_orchestrator.py  test_researcher_agent.py  test_synthesizer_agent.py
src/backend/tests/api/v1/: test_recommendations.py
src/frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.d.ts  vite.config.js  vite.config.ts
src/frontend/src/: App.tsx  main.tsx
src/frontend/src/app/: ProtectedRoute.tsx  router.tsx
src/frontend/src/components/ui/: prototype.tsx  prototypeStyles.ts
src/frontend/src/lib/: api.ts  apiError.ts  cn.ts  demo.ts
src/frontend/src/stores/: authStore.ts  demoZonesStore.ts  wizardStore.ts
src/frontend/src/styles/: globals.css
src/frontend/src/test/: setup.ts
(+49 files in other folders)
