# ============================================
# SynapSeed — Backend (FastAPI + Python)
# ============================================
# Gestor de dependencias: uv / pip / poetry compatible
# Install: pip install -e ".[dev]"
# Run:    uvicorn app.main:app --reload

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapseed-backend"
version = "0.1.0"
description = "Backend de SynapSeed — plataforma de recomendación de agroquímicos"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "SynapSeed Team", email = "synapseed@tec.ac.cr" },
]
keywords = ["agrochemicals", "ai", "recommendation", "fastapi", "langgraph"]

# Dependencias runtime principales
dependencies = [
    # --- Core web ---
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "python-multipart==0.0.20",

    # --- Configuración y validación ---
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "email-validator==2.2.0",

    # --- Base de datos ---
    "SQLAlchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "psycopg2-binary==2.9.10",     # solo para migraciones Alembic (sync)
    "pgvector==0.3.6",             # tipo de dato vector para SQLAlchemy

    # --- Seguridad / Auth ---
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",               # passlib es incompatible con bcrypt >= 4.1
    "python-jose[cryptography]==3.3.0",
    "PyJWT==2.10.1",

    # --- HTTP client / SSE ---
    "httpx==0.28.1",
    "sse-starlette==2.1.3",

    # --- Background workers / cache ---
    "celery[redis]==5.4.0",
    "redis==5.2.1",
    "flower==2.0.1",               # opcional: monitoring de Celery

    # --- Agentes IA / LangChain / LangGraph ---
    "langchain==0.3.20",
    "langchain-core==0.3.62",
    "langchain-openai==0.3.0",
    "langgraph==0.3.20",

    # --- Utilidades ---
    "python-dotenv==1.0.1",
    "tenacity==9.0.0",             # retries con exponential backoff
    "structlog==24.4.0",           # logging estructurado
    "orjson==3.10.12",             # JSON rápido
    "cachetools==5.5.0",
]

# Dependencias opcionales
[project.optional-dependencies]
# Para desarrollo: incluye linter, type-checker, tests
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-cov==6.0.0",
    "pytest-httpx==0.35.0",
    "httpx==0.28.1",
    "ruff==0.8.4",
    "mypy==1.13.0",
    "types-passlib==1.7.7.20241221",
    "types-python-jose==3.3.4.20240106",
    "pre-commit==4.0.1",
    "ipython==8.31.0",
]

# Dependencias para producción
prod = [
    "gunicorn==23.0.0",
    "uvloop==0.21.0",
]

[project.urls]
Repository = "https://github.com/xHellish/synapseed"
Documentation = "https://github.com/xHellish/synapseed/tree/main/Docs"

# ============================================
# Configuración de herramientas
# ============================================

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-dir]
app = "app"

# --- Ruff (linter + formatter) ---
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
# Reglas recomendadas + las que más usamos
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort (imports)
    "N",             # pep8-naming
    "B",             # bugbear (bugs comunes)
    "C4",            # comprehensions
    "UP",            # pyupgrade (sintaxis moderna)
    "SIM",           # simplify
    "PTH",           # usar pathlib
    "RUF",           # reglas de ruff
]
ignore = [
    "E501",   # line length (lo maneja formatter)
    "B008",   # function calls in defaults (FastAPI lo usa mucho)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # asserts en tests
"alembic/**" = ["N999"]  # module name en migraciones

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- MyPy (type-checker) ---
[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
exclude = ["alembic/", "tests/"]

# --- Pytest ---
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:passlib.*",
    "ignore::DeprecationWarning:pydantic.*",
]

# --- Coverage ---
[tool.coverage.run]
source = ["app"]
omit = [
    "app/tests/*",
    "app/alembic/*",
    "app/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
